--- a/portfolio.html
+++ b/portfolio.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Heather Drattlo Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
- <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css" />
+ <link rel="stylesheet" type="text/css" media="screen" href="assets/css/reset.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
    
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="assets/css/main.css">
 
 
 </head>
@@ -26,13 +26,13 @@
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="index1.html">Home </a>
+                    <a class="nav-link" href="index.html">Home </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="contacts1.html">Contact</a>
+                    <a class="nav-link" href="contacts.html">Contact</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="portfolio1.html">Portfolio
+                    <a class="nav-link" href="portfolio.html">Portfolio
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
