--- a/portfolio.html
+++ b/portfolio.html
@@ -73,8 +73,8 @@
             <div class="col-sm-3">
                 <div class="card bg-dark text-white">
                     <img class="card-img" src="assets/img/samuel-zeller-158996-unsplash.png" width: "100" height="auto" alt="Card image">
-                    <div class="card-img-overlay">
-                        <h5 class="card-title">Rutgers Info Widget</h5>
+                    <div class="card-img-overlay"><a class="link" href="https://hdrattlo88.github.io/Train-Scheduler/">
+                        <h5 class="card-title">Train Scheduler</h5></a>
                     </div>
                 </div>
             </div>
