--- a/portfolio.html
+++ b/portfolio.html
@@ -92,7 +92,7 @@
                 <div class="card bg-dark text-white">
                     <img class="card-img" src="assets/img/equalizergif1.gif" width: "100" height="auto" alt="Card image">
                     <div class="card-img-overlay"><a class="link" href="https://jwsalmon.github.io/bandSearcher">
-                        <h5 class="card-title">Group Project 1</h5></a>
+                        <h5 class="card-title">Band Searcher</h5></a>
                     </div>
                 </div>
             </div>
